--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -7,35 +7,35 @@
         <item
             android:id="@+id/nav_audio"
             android:icon="@android:drawable/ic_btn_speak_now"
-            android:title="audio" />
+            android:title="Audio" />
         <item
             android:id="@+id/nav_sensor"
             android:icon="@android:drawable/presence_online"
-            android:title="sensor" />
+            android:title="Sensor" />
         <item
             android:id="@+id/nav_files"
             android:icon="@android:drawable/ic_menu_save"
-            android:title="filesWork" />
+            android:title="FilesWork" />
         <item
             android:id="@+id/nav_camera"
             android:icon="@drawable/ic_menu_camera"
-            android:title="camera" />
+            android:title="Camera" />
         <item
             android:id="@+id/nav_profile"
             android:icon="@drawable/person"
-            android:title="profile" />
+            android:title="Profile" />
         <item
             android:id="@+id/nav_firebase"
             android:icon="@android:drawable/checkbox_on_background"
-            android:title="firebase" />
+            android:title="Firebase" />
         <item
             android:id="@+id/nav_worker"
             android:icon="@android:drawable/sym_def_app_icon"
-            android:title="worker" />
+            android:title="Worker" />
         <item
             android:id="@+id/nav_maps"
             android:icon="@drawable/twotone_navigation_black_48"
-            android:title="Maps" />
+            android:title="Establishments" />
         <item
             android:id="@+id/nav_browser"
             android:icon="@drawable/ic_launcher_background"
